fixed blog heading problem spacing

--- a/sigal-dental/scss/custom/blog.scss
+++ b/sigal-dental/scss/custom/blog.scss
@@ -251,13 +251,13 @@ input {
   padding: 10rem 0;
   margin-top: 5rem;
   @media (max-width: 576px) {
-    height: 95vh;
+    // height: 95vh;
   }
   .container {
     position: relative;
     .btn--back {
       position: absolute;
-      top: -9rem;
+      top: -6rem;
     }
   }
 }
@@ -273,6 +273,7 @@ input {
     align-items: center;
     @media (max-width: 576px) {
       margin-bottom: 2rem;
+      justify-content: flex-start;
     }
   }
   &__avatar {
@@ -308,6 +309,9 @@ input {
       padding: 0.5rem;
       border-radius: 5px 5px 10px 10px;
     }
+    @media (max-width: 576px) {
+      padding: 0;
+    }
   }
 }
 // single heading
@@ -336,7 +340,7 @@ input {
       }
     }
     @media (max-width: 991px) {
-      height: 55vh;
+      height: 70vh;
       margin-bottom: 3rem;
     }
   }
@@ -355,8 +359,8 @@ input {
   }
 }
 .single-page-text {
-  font-size: 2.1rem;
-  padding: 10rem 0;
+  font-size: 1.6rem;
+  padding: 5rem 0;
   line-height: 1.6;
 }
 .blog-post {
@@ -439,3 +443,4 @@ input {
   position: absolute;
   margin-left: -590%;
 }
+// typography
